istio/DarkRelease/1-front-end-dark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: on-premise
  name: web-app-beta
  labels:
    type: front-end
spec:
  selector:
    matchLabels:
      app: web-app
  replicas: 1
  template: 
    metadata:
      labels:
        app: web-app
        type: front-end
        version: beta
    spec:
      containers:
      - name: web-app
        image: leviditomazzo/front-end:DarkRelease
