istio/DarkRelease/service-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: on-premise
  name: service-web-app
  labels:
    type: front-end
spec:
  selector:
    app: web-app
  ports:
    - name: http
      port: 3000
      nodePort: 30180
  type: NodePort
